[project]
name = "inmunobot"
version = "0.1.0"
description = ""
authors = [
    {name = "juanarancibia",email = "arancibia.juan22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain[openai] (>=0.3.20,<0.4.0)",
    "langgraph (>=0.3.11,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"

