[project]
name = "inmunobot"
version = "0.1.0"
description = ""
authors = [
    {name = "juanarancibia",email = "arancibia.juan22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain[openai] (>=0.3.20,<0.4.0)",
    "langgraph (>=0.3.11,<0.4.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "pysqlite3-binary (>=0.5.1,<0.6.0)",
    "supabase (>=2.14.0,<3.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "langchain-unstructured (>=0.1.6,<0.2.0)",
    "unstructured-client (>=0.32.0,<0.33.0)",
    "unstructured (>=0.17.2,<0.18.0)",
    "unstructured[pdf] (>=0.17.2,<0.18.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "torch (>=2.6.0,<3.0.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "frontend (>=0.0.3,<0.0.4)",
    "pymupdf (>=1.25.4,<2.0.0)",
    "langchain-openai (>=0.3.11,<0.4.0)",
    "ipython (>=8.0.0,<9.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"